Patchset to fix pyproject.toml, get_max_input_tokens implementation and placeholder todo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ hnswlib = "^0.7.0"
 types-openpyxl = "^3.1.0.27"
 loguru = "^0.7.2"
 cython = "^3.0.5"
-                   -stubs = "^2.1.1.230928"
+pandas-stubs = "^2.1.1.230928"
 sqlalchemy-bigquery = "^1.8.0"
 google-cloud-bigquery-storage = "^2.22.0"
 sqlalchemy2-stubs = "^0.0.2a37"
